# SPDX-License-Identifier: EUPL-1.2

[package]
license = "EUPL-1.2"
name = "tiny2"
version = "0.1.0"
edition = "2021"
description = "A simple OBSBot Tiny2 GUI control panel for Linux"
homepage = "https://github.com/cgevans/tiny2"
repository = "https://github.com/cgevans/tiny2"
authors = ["Constantine Evans <tiny2@mb.costi.net>"]
readme = "README.md"
keywords = ["obsbot", "tiny2", "camera", "webcam"]
categories = ["hardware-support"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
nix = { version = "0.29", features = ["ioctl"] }
errno = "0"
hex = "0"
glob = "0"
enum_dispatch = "0.3"
rosc = "^0.10"
thiserror = "^1.0"
hexdump = "^0.1"
clap = { version = "4.4.18", features = ["derive"] }

[[bin]]
name = "obsbot-osc-server"
path = "src/osc/main.rs"

[[bin]]
name = "obsbot-gui"
path = "src/gui/main.rs"
